@@ -18,8 +18,10 @@
 #   along with this program. If not, see <http://www.gnu.org/licenses/>
 ################################################################################
 
+import os
 import gippy
 from gips.algorithms.core import Algorithm
+from gips.utils import basename
 
 
 class Project(Algorithm):
@@ -37,6 +39,17 @@ class Project(Algorithm):
                 except:
                     pass
 
+    def stack(self, suffix='stack', **kwargs):
+        """ Stack products (from single date) into single image file """
+        for date in self.inv.dates:
+            filenames = [self.inv[date].filenames[p] for p in self.inv.product_list(date)]
+            img = gippy.GeoImage(filenames)
+            bname = basename(filenames[0])
+            bname = bname[0:bname.rfind('_', 0)]
+            fout = os.path.join(self.inv.projdir, bname + '_' + suffix)
+            imgout = img.Process(fout)
+            imgout.CopyMeta(img)
+
     @classmethod
     def parser(cls, parser0):
         subparser, kwargs = cls.subparser(parser0, project=True)
@@ -45,6 +58,11 @@ class Project(Algorithm):
         parser.add_argument('-q', '--quality', help='JPG Quality', default=75)
 
         parser = subparser.add_parser('inventory', help='Print project inventory', **kwargs)
+
+        parser = subparser.add_parser('stack', help='Stack given products into one image (per date)', **kwargs)
+        parser.add_argument('--suffix', help='Suffix to give stacked output image', default='stack')
+        #h = 'Create as GDAL virtual file format (VRT)'
+        #parser.add_argument('--vrt', help=h, default=False, action='store_true')
 
         return parser0
 
